# representative_code_tuning

./: LICENSE  build.txt  create_pools.sh  get_settings.sh  run_test.sh
col_with_msync/: xxx.cpp
col_with_strings/: build.sh  xxx.cpp  yyy.cpp
column_oriented/: CMakeLists.txt  xxx.cpp  yyy.cpp
half_threads/: xxx.cpp  yyy.cpp
keep_em_separated/: directories.h  xxx.cpp  yyy.cpp
keyid_separate/: xxx.cpp  yyy.cpp
mmap_settings/: xxx.cpp
orig/: build.sh  build_release.sh  xxx.cpp  yyy.cpp
random_device/: xxx.cpp  yyy.cpp
